--- a/index.html
+++ b/index.html
@@ -1,1 +1,356 @@
-我从0开始
+<!DOCTYPE html>
+<html lang="ZH">
+	<!--定义HTML文件格式-->
+	<head>
+		<meta charset="utf-8"> <!--页面编码-->
+		<title>新能源</title> <!--页面的标题-->
+		<meta name="author" content="marchsoft"> <!--定义页面作者-->
+		<meta name="keywords" content="能源"> <!--定义页面关键字-->
+		<link rel="stylesheet" type="text/css" href="css/index.css">   <!--引入主页 css类-->
+		<link rel="stylesheet" type="text/css" href="css/currency.css">   <!--引入通用 css类-->
+	</head>
+	<body>
+		<!--页面导航栏-->
+		<header>
+			<div class="top">
+				<div class="logo">
+					<span>New Energy
+					<span>Design</span>
+					</span>
+				</div>
+				<nav>
+					<ul>
+						<li><a href="#" class="selected">首页</a></li>
+						<li><a href="html/product.html" class="menu-submenu2" onmouseover="submenu1.style.display='block'" onmouseout="submenu1.style.display='none'">产品和服务</a></li>
+						<li><a href="html/programme.html" class="menu-submenu3" onmouseover="submenu2.style.display='block'" onmouseout="submenu2.style.display='none'">市场解决方案</a></li>
+						<li><a href="html/about.html" class="menu-submenu4" onmouseover="submenu3.style.display='block'" onmouseout="submenu3.style.display='none'">关于我们</a>
+						</li>
+					</ul>
+				</nav>
+			</div>
+			<div id="submenu1" class="submenu1" onmouseover="submenu1.style.display='block'" onmouseout="submenu1.style.display='none'">
+				<div class="submenu1-item">
+					<img src="image/title-img1.jpg">
+					<div class="submenu1-item-bloak1">
+						<span><a href="javascript:;">&gt;&ensp;工业自动化</a></span>
+						<span><a href="javascript:;">&gt;&ensp;驱动技术</a></span>
+						<span><a href="javascript:;">&gt;&ensp;能源</a></span>
+						<span><a href="javascript:;">&gt;&ensp;医疗</a></span>
+					</div>
+					<div class="submenu1-item-bloak2">
+						<span><a href="javascript:;">&gt;&ensp;交通</a></span>
+						<span><a href="javascript:;">&gt;&ensp;家用方案</a></span>
+						<span><a href="javascript:;">&gt;&ensp;服务</a></span>
+						<span><a href="javascript:;">&gt;&ensp;中低压配电</a></span>
+					</div>
+				</div>
+			</div>
+			<div id="submenu2" class="submenu2" onmouseover="submenu2.style.display='block'" onmouseout="submenu2.style.display='none'">
+				<div class="submenu2-item">
+					<img src="image/title-img2.jpg" >
+					<div class="submenu2-item-bloak1">
+						<span><a href="javascript:;">&gt;&ensp;汽车制造</a></span>
+						<span><a href="javascript:;">&gt;&ensp;电池制造</a></span>
+						<span><a href="javascript:;">&gt;&ensp;化工与制药</a></span>
+						<span><a href="javascript:;">&gt;&ensp;石油与天然气</a></span>
+					</div>
+					<div class="submenu2-item-bloak2">
+						<span><a href="javascript:;">&gt;&ensp;纤维行业</a></span>
+						<span><a href="javascript:;">&gt;&ensp;视频饮料</a></span>
+						<span><a href="javascript:;">&gt;&ensp;机械制造业</a></span>
+						<span><a href="javascript:;">&gt;&ensp;船舶技术</a></span>
+					</div>
+				</div>
+			</div>
+			<div id="submenu3" class="submenu3" onmouseover="submenu3.style.display='block'" onmouseout="submenu3.style.display='none'">
+				<div class="submenu3-item">
+					<img src="image/title-img3.jpg">
+					<div class="submenu3-item-bloak1">
+						<span><a href="html/advantage.html">&gt;&ensp;我们的优势</a></span>
+						<span><a href="javascript:;">&gt;&ensp;热门新闻</a></span>
+						<span><a href="javascript:;">&gt;&ensp;最新故事</a></span>
+					</div>
+					<div class="submenu3-item-bloak2">
+						<span><a href="javascript:;">&gt;&ensp;公司荣誉</a></span>
+						<span><a href="html/news.html">&gt;&ensp;能源资讯</a></span>
+						<span><a href="html/contact.html">&gt;&ensp;联系我们</a></span>
+					</div>
+				</div>
+			</div>
+		</header>
+		<div class="totop">
+			<a href="#"><img src="image/top.png"></a>
+		</div>
+		<div class="background">
+			<div class="background-item">
+				<div class="background-item-bg">
+					<span class="first-font">新型动力能源碳氢油</span><br>
+					<span class="second-font">市场巨大 清洁环保 原料易购</span><br>
+					<span class="third-font">可替代柴油用于个各种飞机引擎</span>
+				</div>
+			</div>
+		</div>
+		<div class="part2-main">
+			<div class="part2-item">
+				<div class="main-title">
+					<div class="main-title-font1">
+						<span>新能源用途</span>
+					</div>
+					<div class="main-title-font2">
+						<span>NEW ENERGY USE</span>
+					</div>
+					<div class="main-title-font3">
+						<span>—</span>
+					</div>
+				</div>
+				<div class="part2-image">	
+					<div>
+						<img src="image/part2-1.png">
+						<p>汽车燃油</p>
+					</div>
+					<div>
+						<img src="image/part2-2.png">
+						<p>航空燃油</p>
+					</div>
+					<div>
+						<img src="image/part2-3.png">
+						<p>炉灶能源</p>
+					</div>
+					<div>
+						<img src="image/part2-4.png">
+						<p>照明燃料</p>
+					</div>
+					<div>
+						<img src="image/part2-5.png">
+						<p>壁炉燃料</p>
+					</div>
+				</div>
+			</div>
+		</div>	
+		<div class="part3-main">
+			<div class="part3-item">
+				<div class="part3-title">
+					<span>选择新能源
+						<span><i>3</i></span> 大理由
+					</span>
+				</div> 
+				<div class="part3-image">
+					<div>
+						<img src="image/part3-1.png">
+						<span>未来XX市场的占有者 	</span>
+						<p>碳氢油是一种新能源，也是唯一可以取代石油的新型液体燃油。已广泛应用于酒店、宾馆、工厂、学校食堂、大排档以及家庭做饭等，并且炉灶可通用，只需更换炉心。不仅在燃烧领域独占鳌头，如今在动力领域也开创出一片新天地，各种汽车以及发电机均可。</p>
+					</div>
+				</div>
+				<div class="part3-image">
+					<div>
+						<img src="image/part3-2.png">
+						<span>碳氢油开创中国节能环保新时代</span>
+						<p>碳氢油至2013年推向国内市场以来，以价格低、使用方便等特性，逐渐走进了千家万户，不仅使用户减轻了经济负担，同时使用碳氢油也大大降低了使用天然气、液化气等给环境带来的污染，做到了让用户花最少的钱，目前最为理想的新能。</p>
+					</div>
+				</div>
+				<div class="part3-image"> 
+					<div>
+						<img src="image/part3-3.png">
+						<span>新型能源、国家认证、质优价廉</span>
+						<p>碳氢油历经六年问世，如今已荣获国家三项专利，被列为低碳环保新能源。就市场来说，使用价格每升比93#汽油低50%，一顿碳氢油的价格约是一吨柴油价格的1/3，是一吨液化气价格的1/2，并且燃烧时火力更猛、耗量更少，实至名归的物美价廉。</p>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="part4-main">
+			<div class="part4-item">
+				<div class="main-title">
+					<div class="main-title-font1">
+						<span>我们的优势</span>
+					</div>
+					<div class="main-title-font2">
+						<span>OUR ADVANTAGES</span>
+					</div>
+					<div class="main-title-font3">
+						<span>—</span>
+					</div>
+				</div>
+				<div class="part4-item1-main">
+					<div class="part4-item1-main-item">
+						<div class="part4-item1-main-font">
+							<img src="image/part4-1.png">
+							<div class="part4-font">
+								<span>技术优势</span>
+								<p>公司是XX市新能源协会认定的高新技术企业。 公司通过研发、推广、服务等的沉淀积累，已在新能源开发、新能源制造、新能源使用等方面形成了完整的技术体系。</p>
+							</div>
+						</div>
+						<div class="part4-item1-main-font">
+							<img src="image/part4-2.png">
+							<div class="part4-font">
+								<span>产品线优势</span>
+								<p>公司拥有广泛的产品来源渠道，可提供多种新能源产品满足客户的多种需求。公司是多家行业内世界知名企业的产品制造商以及经销商，并与国内一些汽车动力零件商建立了稳固的合作关系。</p>
+							</div>
+						</div>
+						<div class="part4-item1-main-font">
+							<img src="image/part4-3.png">
+							<div class="part4-font">
+								<span>人才优势</span>
+								<p>能为新能源开发行业提供制程技术的企业，需要很强的行业知识积淀，这些积淀主要由人力资源来承载，新能源企业的人力资源并不具有其他行业的高学历特性。</p>
+							</div>
+						</div>
+					</div>
+					<div class="part4-item1-image">
+						<img src="image/part4-4.png">
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="part5-main">
+			<div class="part5-item">
+				<div class="part5-item1">
+					<span>5</span>
+					<p>5大能源投入方向，解决多重能源问题</p>
+				</div>
+				<div class="part5-item2">
+					<span>6</span>
+					<p>6年来，深度网潜心研发能源解决方案</p>
+				</div>
+				<div class="part5-item3">
+					<span>365</span>
+					<p>365天无间断能源供应，保证用户能源需求</p>
+				</div>
+			</div>
+		</div>
+		<div class="part6-main">
+			<div class="part6-item">
+				<div class="main-title">
+					<div class="main-title-font1">
+						<span>能源资讯</span>
+					</div>
+					<div class="main-title-font2">
+						<span>NEWS</span>
+					</div>
+					<div class="main-title-font3">
+						<span>—</span>
+					</div>
+				</div>
+				<table class="part6-table">
+					<tbody>
+						<tr class="part6-table-tr">
+							<td class="part6-table-td">
+								<div class="part6-table-td-main">
+									<div class="part6-table-td-data">
+										<a href="javascript:;">
+											<span class="part6-table-td-data-day">12/28</span>
+											<span class="part6-table-td-data-year">2017</span>
+										</a>
+									</div>
+									<div  class="part6-table-td-news">
+										<a href="javascript:;" ><span>波音是如何看生物航油？</span></a>
+										<p>如果不是因为地沟油，公众对航空生物燃料这一概念应该还比较陌生，前者做为曾经的“过街老鼠”而后摇身一变成高大上的航空...</p>
+									</div>
+								</div>
+							</td>
+							<td class="part6-table-td">
+								<div class="part6-table-td-main">
+									<div class="part6-table-td-data">
+										<a href="javascript:;">
+											<span class="part6-table-td-data-day">12/28</span>
+											<span class="part6-table-td-data-year">2017</span>
+										</a>
+									</div>
+									<div  class="part6-table-td-news">
+										<a href="javascript:;" ><span>波音是如何看生物航油？</span></a>
+										<p>如果不是因为地沟油，公众对航空生物燃料这一概念应该还比较陌生，前者做为曾经的“过街老鼠”而后摇身一变成高大上的航空...</p>
+									</div>
+								</div>
+							</td>
+						</tr>
+						<tr class="part6-table-tr">
+							<td class="part6-table-td">
+								<div class="part6-table-td-main">
+									<div class="part6-table-td-data">
+										<a href="javascript:;">
+											<span class="part6-table-td-data-day">12/28</span>
+											<span class="part6-table-td-data-year">2017</span>
+										</a>
+									</div>
+									<div  class="part6-table-td-news">
+										<a href="javascript:;"><span>我们能拯救藻类生物燃料产业吗？</span></a>
+										<p>藻类生物燃料遇到点烦心事。这种替代燃料能源，和许多生物燃料一样，有助于减少碳排放，而且还不占用粮食生产用地。但是它...</p>
+									</div>
+								</div>
+							</td>
+							<td class="part6-table-td">
+								<div class="part6-table-td-main">
+									<div class="part6-table-td-data">
+										<a href="javascript:;">
+											<span class="part6-table-td-data-day">12/28</span>
+											<span class="part6-table-td-data-year">2017</span>
+										</a>
+									</div>
+									<div class="part6-table-td-news">
+										<a href="javascript:;"><span>我们能拯救藻类生物燃料产业吗？</span></a>
+										<p>藻类生物燃料遇到点烦心事。这种替代燃料能源，和许多生物燃料一样，有助于减少碳排放，而且还不占用粮食生产用地。但是它...</p>
+									</div>
+								</div>
+							</td>
+						</tr>
+					</tbody>
+				</table>
+			</div>
+		</div>
+		<!--页面底部-->
+		<footer class="buttom-main">
+			<div class="buttom-item">
+				<div class="buttom-item1">
+					<div>
+						<img src="image/buttom-1.png">
+						<div>
+							<span id="abc" class="buttom-font1">高效率</span>
+							<span class="buttom-font2">降低能源成本</span>
+						</div>
+					</div>
+					<div>
+						<img src="image/buttom-2.png">
+						<div>
+							<span class="buttom-font1">可持续</span>
+							<span class="buttom-font2">所需原料简单</span>
+						</div>
+					</div>
+					<div>
+						<img src="image/buttom-3.png">
+						<div>
+							<span class="buttom-font1">多用途</span>
+							<span class="buttom-font2">支持各领域能源</span>
+						</div>
+					</div>
+					<div>
+						<img src="image/buttom-4.png">
+						<div>
+							<span class="buttom-font1">安全性</span>
+							<span class="buttom-font2">不易爆，不易燃</span>
+						</div>
+					</div>
+				</div>
+				<div class="buttom-item2">
+					<div class="buttom-item2-info">
+						<span>公司地址：XXX省XXX市XXX县XXX路XXX号</span>
+						<span>联系电话：020-000000 000-000000</span>
+						<span>联系邮箱：contact@fkadjkhsf.com</span>
+						<span>手机号码：130000000</span>
+					</div>
+					<div class="buttom-item2-img">
+						<img src="image/QR code.png">
+					</div>
+				<div class="buttom-item3">
+					<p>&copy;2018 三月软件marchsoft 版权所有</p>
+					<div>
+						<span><a href="javascript:;">手机版</a></span>
+						<span>&ensp;&#124;&ensp;</span>
+						<span>本站于<a href="javascript:;">三月软件</a>搭建</span>
+						<span>&ensp;&#124;&ensp;</span>
+						<span><a href="javascript:;">管理员登陆</a></span>
+					</div>
+				</div>
+				</div>
+			</div>
+		</footer>
+		
+	</body>
+</html>
